--- a/public/main.css
+++ b/public/main.css
@@ -16,7 +16,7 @@ body{
     float:left;
 }
 
-#barchart_div{
+#record_div{
   width:50%;
   height:90vh;
   font-size: calc(2vw + 2vh);
@@ -149,7 +149,7 @@ body{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #F3E600;
+    background-color: yellow;
     z-index: 0;
     animation: load .5s forwards linear;
   }
