--- a/public/main.css
+++ b/public/main.css
@@ -1,33 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 *, *:before, *:after {box-sizing:border-box;}
 body{
-	background:#767a83;
+	background:#ADADAD;
 	/* margin-top:50px; */
 	font: 15px "Trebuchet MS";
 	/* color:#c0c0c0; */
   color:white;
 }
 
-
 #button_div{
     width:100%;
     height:10vh;
-    border:1px solid green;
+    /* border:1px solid green; */
     float:left;
 }
 
 #record_div{
   width:50%;
-  height:90vh;
+  height:89vh;
   font-size: calc(2vw + 2vh);
   float:left;
   overflow-y: scroll;
 }
 
 #detail_div{
-  width:49%;
-  height:90vh;
-  border:1px solid blue;
+  background-color: #8A8A8A;
+  color: #000;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  border: 3px solid;
+  width:50%;
+  height:88vh;
+  /* border:1px solid blue; */
   float:left;
 }
 
@@ -35,8 +38,9 @@ body{
   display: block;
   margin-top: 0.67em;
   margin-bottom: 0.67em;
+  color: white;
   fill: white;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Orbitron', monospace;
   font-size: 25px;
   letter-spacing: 2px;
   text-decoration: none;
@@ -84,6 +88,7 @@ body{
 
 .button_normal {
   font-family: "Open Sans", sans-serif;
+  fill: #000;
   font-size: 16px;
   letter-spacing: 2px;
   text-decoration: none;
@@ -177,6 +182,7 @@ body{
   line-height: 1.5;
   font-size: 20px;
   font-weight: bold;
+  color: white;
 }
 
 .detail__label {
@@ -184,6 +190,7 @@ body{
   font-size: 20px;
   font-weight: bold;
   font-family: 'Orbitron', monospace;
+  color: white;
 }
 
 .graph .labels.y-labels {
